@@ -142,6 +142,8 @@ Bug Fixes
 * The rbuilder rAPA plugins now contain .pyc and .pyo files (RAA-1605)
 * The license and crypto report now allows you to click on the package names when they contain flavors.  (RBL-3856)
 * veth network interfaces are no longer shown in the rAPA configuration interface. (RAA-1627)
+* startImageJob() for imageless builds no longer returns an error when called 
+  over xmlrpc. (RBL-3885)
 
 
 Changes in 4.1.1
